PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
12 Oct 2006, PHP 5.2.0RC6
- Fixed PECL bug #8816 (issue in php_oci_statement_fetch with more than one 
  piecewise column) (jeff at badtz-maru dot com, Tony)
- Fixed bug #39067 (getDeclaringClass() and private properties). (Tony)
- Fixed bug #38198 (possible crash when COM reports an exception). (Ilia)
- Fixed bug #37262 (var_export() does not escape \0 character). (Ilia)

05 Oct 2006, PHP 5.2.0RC5
- Updated bundled OpenSSL to version 0.9.8d in the Windows distro. (Edin)
- Updated Postgresql client libraries to 8.1.4 in the Windows distro. (Edin)
- Speedup array/HashTable copying. (Matt Wilmas, Dmitry)
- Added ability to make SOAP call userspace PHP<->XML converters. (Dmitry)
- Added support for character sets in pg_escape_string() for PostgreSQL
  8.1.4 and higher. (Ilia)
- Added support for character sets in PDO quote() method for PostgreSQL
  8.1.4 and higher. (Ilia)
- Fixed infinite loop when a wrong color index is given to imagefill (Pierre)
- Fixed mess with CGI/CLI -d option (now it works with cgi; constants are
  working exactly like in php.ini; with FastCGI -d affects all requests).
  (Dmitry)
- Fixed missing open_basedir check inside chdir() function. (Ilia)
- Fixed bug #39039 (SSL: fatal protocol error when fetching HTTPS from
  servers running Google web server). (Ilia)
- Fixed bug #39035 (Compatibilty issue between DOM and 
  zend.ze1_compatibility_mode). (Rob)
- Fixed bug #39032 (strcspn() stops on null character). (Tony)
- Fixed bug #39017 (foreach(($obj = new myClass) as $v); echo $obj; segfaults).
  (Dmitry)
- Fixed bug #39004 (Fixed generation of config.nice with autoconf 2.60).
  (Ilia)
- Fixed bug #39003 (__autoload() is called for type hinting). (Dmitry, Tony)
- Fixed bug #39001 (ReflectionProperty returns incorrect declaring class for 
  protected properties). (Tony)